# asr_decoding

./: README.md  evaluate.py  make_plots.py  pyproject.toml  results.json  run_experiments.py  train_financial_lm.sh  wav2vec2decoder.py
data/earnings22_test/: manifest.csv
data/earnings22_train/: corpus.txt
data/librispeech_test_other/: manifest.csv
