[project]
name = "asr-decoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "jiwer>=4.0.0",
    "levenshtein>=0.27.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
